--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -18,7 +18,7 @@
                 </a>
             </li>
             <li>
-                <a href="/member/logIn">
+                <a href="/member/login">
                     로그인
                 </a>
             </li>
