--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,7 +22,25 @@
                     로그인
                 </a>
             </li>
+            <li>
+                <a href="#" onclick="doLogOut()">
+                    로그아웃
+                </a>
+            </li>
+            <li>
+                <a href="/member/search">
+                    아이디 / 비밀번호 찾기
+                </a>
+            </li>
+            <li>
+                <a href="/member/mypage">
+                    내 정보
+                </a>
+            </li>
         </ul>
+
+        <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="js/header.js"></script>
     </div>
 
 </body>
