--- a/src/main/resources/templates/member/leave.html
+++ b/src/main/resources/templates/member/leave.html
@@ -8,22 +8,14 @@
     <div th:replace = "~{/header.html :: header}">
 
     </div>
-
-    마이 페이지
-    <div id="myPage">
+    탈퇴 페이지
+    <div id="deletePage">
 
     </div>
-    <button type="button" onclick=location.href="/member/update">
-        정보 수정
-    </button>
-    <button type="button" onclick=location.href="/member/leave">
-        탈퇴
-    </button>
     <div th:replace = "~{/footer.html :: footer}">
 
     </div>
-
     <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="/js/member/mypage.js"></script>
+    <script src="/js/member/leave.js"></script>
 </body>
 </html>
