--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -29,6 +29,13 @@
 
         </div>
         이메일 : <input id="emailInput" onkeyup="emailCheck()"/>
+        <button class= "authBtn" type="button" onclick="doAuth()" disabled>
+        인증 요청
+        </button>
+        <div class="authBox">
+
+        </div>
+
         <div class="emailCheckBox">
 
         </div>
