--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -37,6 +37,11 @@
                     내 정보
                 </a>
             </li>
+            <li>
+                <a href="/board/all">
+                    게시판
+                </a>
+            </li>
         </ul>
 
         <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
