--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -9,16 +9,26 @@
 <div th:replace="~{ /header.html :: header }"></div>
 <h3> 게시물 쓰기 </h3>
 
-<form>
-
-    <select id="category">
-        <option value="1">ㅇㅇ</option>
-        <option value="2">ㅇㅇ</option>
-    </select>
-
-    <input id="title" type="text" class="form-control" /> <br />
-    <textarea id="content" rows="10" class="form-control"></textarea>
-    <button onclick="_write()" type="button"> 쓰기 </button>
+<form class="boardWriteForm">
+    <div>
+        <select name="bcno" id="category">
+            <option value="1">ㅇㅇ</option>
+            <option value="2">ㅇㅇ</option>
+        </select>
+    </div>
+    <div>
+        제목 : <input name="btitle" id="btitle" type="text" class="form-control" /> <br />
+    </div>
+    <div>
+        내용 : <textarea name="bcontent" id="bcontent" rows="10" class="form-control"></textarea>
+    </div>
+    <div>
+        첨부파일 : <input name="uploadFile" id="bfile" type="file"/>
+    </div>
+    <div>
+        <button onclick="_write()" type="button"> 작성하기 </button>
+    </div>
+    
 
 
 </form>
