--- a/src/main/resources/templates/board/all.html
+++ b/src/main/resources/templates/board/all.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
 
@@ -7,28 +8,48 @@
 </head>
 
 <body>
-<div th:replace="~{ /header.html :: header }"></div>
+    <div th:replace="~{ /header.html :: header }"></div>
+    <div class="container">
+        <h3> 게시물 전체 출력 </h3>
+        <a href="/board/write"> 글쓰기 </a>
 
-<h3> 게시물 전체 출력 </h3>
-<a href="/board/write"> 글쓰기 </a>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th style="width: 5%"> 번호 </th>
+                    <th style="width: 60%"> 제목 </th>
+                    <th style="width: 15%"> 작성자 </th>
+                    <th style="width: 15%"> 작성일 </th>
+                    <th style="width: 5%"> 조회수 </th>
+                </tr>
 
-<table class="table">
-    <thead>
-    <tr> <th> 게시물 번호  </th> <th> 제목  </th> <th> 작성자  </th> <th> 작성일  </th> <th> 조회수  </th>  </tr>
+            </thead>
+            <tbody class="board">
 
-    </thead>
-    <tbody class ="board">
+                <tr>
+                    <th> 1 </th>
+                    <th><a href="/board/detail?bno=1"> 아</a> </th>
+                    <th> 가 </th>
+                    <th> 2024-11-11 </th>
+                    <th> 1 </th>
+                </tr>
 
-    <tr> <th> 1  </th> <th><a href="/board/detail?bno=1"> 아</a>  </th> <th> 가  </th> <th> 2024-11-11  </th> <th> 1  </th>  </tr>
 
+                <tr>
+                    <th> 2 </th>
+                    <th><a href="/board/detail?bno=2"> 가 </a> </th>
+                    <th> 나 </th>
+                    <th> 2024-11-12 </th>
+                    <th> 2 </th>
+                </tr>
 
-    <tr> <th> 2  </th> <th><a href="/board/detail?bno=2"> 가 </a>  </th> <th> 나  </th> <th> 2024-11-12  </th> <th> 2  </th>  </tr>
+            </tbody>
 
-    </tbody>
-
-    <tbody id="boardTbody">
-
+            <tbody id="boardTbody">
+        </table>
+    </div>
     <script src="/js/board/all.js"></script>
     <div th:replace="~{ /footer.html :: footer }"></div>
 </body>
+
 </html>
