--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,52 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:fragment="header">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 공통 부트스트랩 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Header CSS 호출 -->
+    <link rel="stylesheet" href="/css/header.css" />
 </head>
-<body>
-    <div th:fragment = "header">
-        <ul>
-            <li>
-                <a href="/">
-                    홈
-                </a>
-            </li>
-            <li>
-                <a href="/member/signup">
-                    회원가입
-                </a>
-            </li>
-            <li>
-                <a href="/member/login">
-                    로그인
-                </a>
-            </li>
-            <li>
-                <a href="#" onclick="doLogOut()">
-                    로그아웃
-                </a>
-            </li>
-            <li>
-                <a href="/member/search">
-                    아이디 / 비밀번호 찾기
-                </a>
-            </li>
-            <li>
-                <a href="/member/mypage">
-                    내 정보
-                </a>
-            </li>
-            <li>
-                <a href="/board/all">
-                    게시판
-                </a>
-            </li>
-        </ul>
 
-        <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-        <script src="js/header.js"></script>
+<body>
+    <div class="container">
+
+        <!-- 부트스트랩에서 제공하는 헤더-->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <!-- 로고 들어가는 자리(주로) -->
+                <a class="navbar-brand" href="/"> Web Logo </a>
+
+                <!-- 콜랩스 버튼 : 디바이스(화면 크기)가 작아지면 보이게 되는 버튼 -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- 메인 메뉴 버튼들 -->
+                <div class="collapse navbar-collapse topMenu" id="navbarSupportedContent">
+                    <!-- 메인 메뉴 -->
+                    <ul id="mainMenu">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/board/all">
+                                게시판
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/api">
+                                공공 데이터
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">
+                                추가 메뉴2
+                            </a>
+                        </li>
+                    </ul>
+
+                    <!-- 로그인 관련 메뉴 -->
+                    <ul id="loginMenu">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">
+                                홈
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/member/signup">
+                                회원가입
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/member/login">
+                                로그인
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" onclick="doLogOut()">
+                                로그아웃
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/member/search">
+                                아이디 / 비밀번호 찾기
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/member/mypage">
+                                내 정보
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+
+        <!--------------------------------------------------------------------------------     -->
+
+
+        <!-- 공통 js -->
+        <!-- jquery, ajax -->
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <!-- 부트스트랩 js -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+        <script src="/js/header.js"></script>
     </div>
 
 </body>
+
 </html>
