--- a/src/main/resources/templates/board/all.html
+++ b/src/main/resources/templates/board/all.html
@@ -10,8 +10,28 @@
 <body>
     <div th:replace="~{ /header.html :: header }"></div>
     <div class="container">
-        <h3> 게시물 전체 출력 </h3>
+        <h3> 카테고리 커뮤니티 </h3>
         <a href="/board/write"> 글쓰기 </a>
+
+
+        <!-- allPrint(페이지번호 page, 카테고리번호 bcno)-->
+        <div style="display: flex;">
+            <div style="width: 50px;" onclick="allPrint(1, 0)">
+                전체 보기
+            </div>
+            <div style="width: 50px;" onclick="allPrint(1, 1)">
+                자유
+            </div>
+            <div style="width: 50px;" onclick="allPrint(1, 2)">
+                노하우
+            </div>
+            <div style="width: 50px;" onclick="allPrint(1, 3)">
+                판매
+            </div>
+            <div style="width: 50px;" onclick="allPrint(1, 4)">
+                구매
+            </div>
+        </div>
 
         <table class="table table-hover">
             <thead>
@@ -47,6 +67,15 @@
 
             <tbody id="boardTbody">
         </table>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" onclick="allPrint()">Previous</a></li>
+                <li class="page-item"><a class="page-link" onclick="allPrint(1)">1</a></li>
+                <li class="page-item"><a class="page-link" onclick="allPrint(2)">2</a></li>
+                <li class="page-item"><a class="page-link" onclick="allPrint(3)">3</a></li>
+                <li class="page-item"><a class="page-link" onclick="allPrint()">Next</a></li>
+            </ul>
+        </nav>
     </div>
     <script src="/js/board/all.js"></script>
     <div th:replace="~{ /footer.html :: footer }"></div>
