--- a/src/main/resources/templates/board/all.html
+++ b/src/main/resources/templates/board/all.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
 
     <title>Title</title>
+
+    <style>
+        .categoryActive {
+            color: red;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
     <div th:replace="~{ /header.html :: header }"></div>
     <div class="container">
         <h3> 카테고리 커뮤니티 </h3>
-        <a href="/board/write"> 글쓰기 </a>
+        <div onclick="writeLoginTest()"> 글쓰기 </div>
 
-
+        <!-- 카테고리 구역 -->
         <!-- allPrint(페이지번호 page, 카테고리번호 bcno)-->
-        <div style="display: flex;">
-            <div style="width: 50px;" onclick="allPrint(1, 0)">
+        <div class="categoryBox" style="display: flex;">
+            <div class="categoryActive" style="width: 50px;" onclick="allPrint(1, 0)">
                 전체 보기
             </div>
             <div style="width: 50px;" onclick="allPrint(1, 1)">
@@ -33,6 +40,7 @@
             </div>
         </div>
 
+        <!-- 컨텐츠 구역 -->
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -67,6 +75,8 @@
 
             <tbody id="boardTbody">
         </table>
+
+        <!-- 페이징 구역 -->
         <nav aria-label="Page navigation example">
             <ul class="pagination">
                 <li class="page-item"><a class="page-link" onclick="allPrint()">Previous</a></li>
@@ -76,6 +86,29 @@
                 <li class="page-item"><a class="page-link" onclick="allPrint()">Next</a></li>
             </ul>
         </nav>
+
+        <!-- 검색 구역 -->
+        <div>
+            <select class="searchKey">
+                <!-- value : select 에서 선택된 항목의 값, SQL 에서 검색 시 사용되는 필드명-->
+                <option value="btitle">
+                    제목
+                </option>
+                <option value="bcontent">
+                    내용
+                </option>
+                <option value="id">
+                    작성자
+                </option>
+            </select>
+            <!-- SQL 조회 할 때 사용되는 필드의 값 -->
+            <input class="searchKeyword" />
+            <button type="button" onclick="onSearch()">
+                검색
+            </button>
+        </div>
+
+
     </div>
     <script src="/js/board/all.js"></script>
     <div th:replace="~{ /footer.html :: footer }"></div>
