--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -43,8 +43,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">
-                                추가 메뉴2
+                            <a class="nav-link" href="/product/register">
+                                제품 등록
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/product">
+                                제품 목록
                             </a>
                         </li>
                     </ul>
